fix: reset background-attachment to scroll on mobile
iOS Safari breaks with background-attachment: fixed causing
the background image to not render at all

--- a/style.css
+++ b/style.css
@@ -622,5 +622,6 @@ main {
     background-size: auto 100vh;
     background-repeat: no-repeat;
     background-position: center;
+    background-attachment: scroll;
   }
 }
